# dingtalk-codex-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.https.yaml  compose.yaml  pyproject.toml
config/: commands.json  workspaces.compose.json  workspaces.json
deploy/: Caddyfile  dingtalk-codex-gateway.env.example  dingtalk-codex-gateway.service  docker-compose.env.example  nginx.example.conf  pc-agent.env.example
deploy/pc-agent/: README.md  com.laeddis.dingtalk-codex-agent.plist  dingtalk-codex-agent.service
docs/: 2026-06-06-dingtalk-codex-gateway-design.md  deployment.md
src/: audit.py  config.py  dingtalk.py  dingtalk_client.py  job_store.py  meta_client.py  models.py  pc_agent.py  router.py  security.py  server.py  store_clients.py
src/executors/: codex_executor.py  script_executor.py
tests/: test_config.py  test_job_store.py  test_router.py  test_server.py
